Typescript new code prompting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
-      "target": "ES6",
+      "target": "ES2016",
       "module": "CommonJS",
       "sourceMap": true,
-      "outDir": "out"
+      "outDir": "out",
+      "lib": ["ES2017", "dom"]
     },
         "exclude": [
             "node_modules"
